--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous">
+  <!--linking external css-->
   <link rel="stylesheet" href="assets/css/style.css">
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
@@ -29,6 +30,7 @@
   </div>
   <div class="row">
     <div class="col-sm-6">
+      <!--All Gifs-->
       <div id="gifs-appear-here">
       </div>
     </div>
@@ -42,6 +44,7 @@
         </div>
         <div class="form-group">
           <div class="col-sm-12">
+            <!--Getting the new gif buttons-->
             <input type="text" id="new-button" class="form-control">
           </div>
           </br>
@@ -57,7 +60,9 @@
   </div>
 
   <script type="text/javascript">
+    //main array that has all buttons value
     var arr = ["cat", "dog", "parrot"];
+    //after editing array we are updating the gif-buttons view
     function rbuttons() {
       $("#gif-buttons").empty();
       for (var i = 0; i < arr.length; i++) {
@@ -73,6 +78,7 @@
 
       }
     }
+    //function for getting form input value and push that value in array
     $("#onsubmit").on("click", function (event) {
       event.preventDefault();
       var addb = $("#new-button").val();
@@ -81,6 +87,7 @@
       rbuttons();
     });
     rbuttons();
+    //function for getting gif from the ajax url
 
     $(document).on("click", ".animal", function () {
       var animal = $(this).attr("data-animal");
@@ -112,6 +119,7 @@
 
       });
     });
+    //for pausing and playing the gifs
     $(document).on('click', '.gif', function () {
       var src = $(this).attr("src");
       if ($(this).hasClass('playing')) {
